# Kyanite

./: .gitignore  Cargo.toml  Ideas.md  LICENSE.txt  Readme.md  buffer_sizes.txt  build.rs  data_format.txt  live_ranges.txt  log.txt  opt.gv  post.md  publish_all  raw.gv  step_mem.txt  tee  todo.txt
kn-cuda-eval/: Cargo.toml  build.rs
kn-cuda-eval/benches/: custom_conv.rs  memory.rs
kn-cuda-eval/cuda/: array.h
kn-cuda-eval/examples/: stable_diffusion.rs
kn-cuda-eval/src/: device_tensor.rs  executor.rs  kernels.rs  lib.rs  offset_tensor.rs  planner.rs  quant.rs  runtime.rs  shape.rs  step.rs  tester.rs
kn-cuda-eval/src/alloc/: mod.rs  problem.rs
kn-cuda-eval/src/autokernel/: common.rs  gather.cu  gather.rs  layernorm.rs  mod.rs  reduce.rs  scalar.cu  scalar.rs  softmax.cu  softmax.rs  util.cu
kn-cuda-eval/tests/: mod.rs
kn-cuda-eval/tests/root/: elementwise.rs  graphs.rs  kernels.rs  mod.rs  opt.rs  runner.rs  scalar_fusion.rs  slow.rs  tensor_utils.rs
kn-cuda-sys/: Cargo.toml  build.rs  wrapper.h
kn-cuda-sys/doc_headers/: copy_files.py
kn-cuda-sys/doc_headers/cuda_include/: cublas_api.h  cuda.h  cuda_bf16.hpp  cuda_fp16.hpp  cuda_runtime.h  nvrtc.h
kn-cuda-sys/doc_headers/cuda_include/crt/: host_defines.h
kn-cuda-sys/doc_headers/cuda_include/nv/: .gitignore
kn-cuda-sys/src/: bindings.rs  lib.rs
kn-cuda-sys/src/wrapper/: descriptor.rs  event.rs  graph.rs  group.rs  handle.rs  mod.rs  operation.rs  status.rs
kn-cuda-sys/src/wrapper/mem/: device.rs  mod.rs  pinned.rs  pool.rs
kn-cuda-sys/src/wrapper/rtc/: args.rs  core.rs  mod.rs
kn-cuda-sys/tests/: cublas.rs  fused.rs  mem.rs  negative_stride.rs  nvrtc.rs  restride.rs
kn-graph/: .gitattributes  Cargo.toml  build.rs
kn-graph/proto/: onnx.proto3
kn-graph/src/: cpu.rs  dot.rs  dtype.rs  graph.rs  lib.rs  restride.rs  shape.rs  visualize.rs
kn-graph/src/onnx/: external_data.rs  inputs.rs  load.rs  loader.rs  mod.rs  proto.rs  result.rs  store.rs  typed_value.rs
kn-graph/src/optimizer/: affine.rs  core.rs  mod.rs
kn-graph/tests/graph/: mod.rs
kn-python/: .gitignore  Cargo.toml  example.py  pyproject.toml
kn-python/src/: lib.rs
kn-runtime/: Cargo.toml
kn-runtime/examples/: stable_diffusion.rs
kn-runtime/src/: lib.rs
rust/: .gitignore  CMakeLists.txt  Cargo.toml  data_format.txt  template.cu
rust/alpha-zero/: Cargo.toml
rust/alpha-zero/src/: bot_game_zero.rs  lib.rs  old_zero.rs  util.rs  zero.rs
rust/alpha-zero/src/convert/: mod.rs  pgn_archive_to_bin.rs  pgn_to_bin.rs  random_to_bin.rs
rust/alpha-zero/src/games/: ataxx_cnn_network.rs  ataxx_cpu_network.rs  ataxx_onnx_network.rs  ataxx_output.rs  ataxx_torch_network.rs  ataxx_utils.rs  mod.rs
rust/alpha-zero/src/mapping/: ataxx.rs  binary_output.rs  bit_buffer.rs  chess.rs  mod.rs  pgn_to_bin.rs  sttt.rs  ttt.rs
rust/alpha-zero/src/network/: common.rs  cpu.rs  cudnn.rs  decode_output.rs  decode_policy.rs  dummy.rs  mod.rs  onnx.rs  onnx_runtime.rs  symmetry.rs  torch_utils.rs  tower_shape.rs
rust/alpha-zero/src/new_selfplay/: collector.rs  commander.rs  core.rs  generator.rs  mod.rs  server.rs
rust/alpha-zero/src/oracle/: mod.rs  syzygy.rs
rust/alpha-zero/src/selfplay/: collect.rs  collector.rs  commander.rs  core.rs  generate_mcts.rs  generate_zero.rs  generator.rs  mod.rs  move_selector.rs  protocol.rs  server.rs  simulation.rs
rust/alpha-zero/src/stats/: lichess_puzzle.rs  mod.rs  network_accuracy.rs  visualize.rs
rust/alpha-zero/src/zero/: mod.rs  node.rs  range.rs  step.rs  stop_cond.rs  tree.rs  wrapper.rs
rust/alpha-zero/tests/: tree.rs
rust/alpha-zero/tests/mapper/: ataxx.rs  chess_flat_gen.rs  chess_manual.rs  (+3 more)
rust/board-game/: Cargo.toml  todo.txt
rust/board-game/src/: board.rs  wdl.rs
rust/board-game/tests/: ataxx_perft.rs  board.rs
rust/cuda-nn-eval/: Cargo.toml  build.rs
rust/cuda-nn-eval/benches/: custom_conv.rs  memory.rs
rust/cuda-nn-eval/cuda/: util.h
rust/cuda-nn-eval/examples/: stable_diffusion.rs
rust/cuda-nn-eval/kernels/: kernels.cu
rust/cuda-nn-eval/src/: cpu_executor.rs  device_tensor.rs  executor.rs  fuser.rs  graph.rs  kernels.rs  lib.rs  load.rs  main.rs  net.rs  offset_tensor.rs  onnx.rs  planner.rs  quant.rs  runtime.rs  shape.rs  step.rs  tensor.rs  tester.rs  tower_net.rs  util.rs
rust/cuda-nn-eval/tests/: activations.rs  mod.rs
rust/cuda-sys/: Cargo.toml  build.rs  wrapper.h
rust/cuda-sys/src/: bindings.rs  lib.rs  main.rs
rust/cuda-sys/tests/: cublas.rs  fused.rs  mem.rs  negative_stride.rs  nvrtc.rs  restride.rs
rust/kz-core/: Cargo.toml
rust/kz-core/src/: bot.rs  lib.rs
rust/kz-core/tests/: mod.rs  tree.rs
rust/kz-lichess/: Cargo.toml
rust/kz-misc/: Cargo.toml
rust/kz-misc/src/: lib.rs  muzero_debug.rs  visualize.rs
rust/kz-selfplay/: Cargo.toml
rust/kz-selfplay/src/: binary_output.rs  lib.rs  move_selector.rs  simulation.rs  superluminal.rs
rust/kz-util/: Cargo.toml
rust/kz-util/src/: display.rs  lib.rs  math.rs  panic_rng.rs  sequence.rs  stable_dirichlet.rs  throughput.rs
rust/kz-util/tests/: top_k.rs
rust/licorice/: Cargo.toml  LICENSE  ReadMe.md
rust/licorice/examples/: exhaustive.rs  export_game.pgn  playfish.rs  test.json  test2.json
rust/licorice/src/: client.rs  errors.rs  lib.rs
rust/nn-graph/: Cargo.toml  build.rs
rust/nn-graph/src/: cpu.rs  dot.rs  graph.rs  lib.rs  optimizer.rs  shape.rs  visualize.rs  wrap_debug.rs
rust/pgn-reader/: Cargo.toml
rust/pgn-reader/src/: lib.rs
rust/pgn-reader/tests/: basic.rs
rust/src/: bot_game_zero.rs  evaluation.rs  lib.rs  mcts_zero.rs  network.rs  selfplay.rs  util.rs  zero.rs
rust/src/games/: ataxx_output.rs  ataxx_torch_network.rs  mod.rs
rust/src/network/: dummy.rs  google_onnx.rs  google_torch.rs  mix_torch.rs  mod.rs
rust/src/selfplay/: collect.rs  generate_mcts.rs  generate_zero.rs  mod.rs
rust/test-async/: Cargo.toml
rust/test-async/src/: main.rs
rust/tree-vis/: Cargo.toml
rust/tree-vis/src/: main.rs
rust/two-player-game/: .gitignore  build.rs
rust/two-player-game/src/: board.rs  uai.rs
rust/two-player-game/tests/: ataxx_perft.rs
(+362 files in other folders)
