[workspace]

members = [
    # general crates
    "nn-graph",
    "cuda-sys",
    "cuda-nn-eval",
    "pgn-reader",
    "licorice",
    # kZero-specific crates
    "kz-util",
    "kz-core",
    "kz-selfplay",
    "kz-lichess",
    "kz-misc",
]

[profile.release]
# lto = true
debug = true

# temporary fix until https://github.com/jordanbray/chess/pull/67 is merged
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3


# TODO try turning off default features
# TODO require features per-subcrate instead of here for all of them
# TODO use either flume or crossbeam, not both
# TODO get rid of criterion
# TODO replace chess with shakmaty everywhere
# TODO switch from serde to nanoserde or similar, we just want basic json deserialization
# TODO there are two different syn versions in the tree
# TODO update LRU once zero-capacity cache is allowed again https://github.com/jeromefroe/lru-rs/issues/165
# TODO update crossterm once double events are fixed https://github.com/crossterm-rs/crossterm/issues/772

[workspace.dependencies]
# path dependencies
cuda-nn-eval = { path = "cuda-nn-eval" }
cuda-sys = { path = "cuda-sys" }
kz-core = { path = "kz-core" }
kz-selfplay = { path = "kz-selfplay" }
kz-util = { path = "kz-util" }
licorice = { path = "licorice" }
nn-graph = { path = "nn-graph" }
pgn-reader = { path = "pgn-reader" }

# crates.io dependencies
anyhow = "1.0.70"
async-trait = "0.1.68"
bindgen = "0.64.0"
board-game = "0.8.2"
buffered-reader = "1.1.4"
bytemuck = "1.13.1"
byteorder = "1.4.3"
bytes = "1.4.0"
bzip2 = "0.4.4"
cc = "1.0.79"
chrono = { version = "0.4.24" }
clap = { version = "4.2.1", features = ["derive"] }
criterion = "0.4.0"
crossbeam = "0.8.2"
crossterm = "0.23.2"
decorum = { version = "0.3.1", default-features = false, features = ["std"] }
flume = "0.10.14"
futures = { version = "0.3.28", default-features = false, features = ["executor", "thread-pool"] }
futures-core = "0.3.28"
futures-util = "0.3.28"
image = { version = "0.24.6", default-features = false, features = ["png"] }
indexmap = "1.9.3"
internal-iterator = "0.2.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
lru = "0.7.8"
memchr = "2.5.0"
ndarray = "0.15.6"
num-traits = "0.2.15"
palette = { version = "0.6.1", default-features = false, features = ["std"] }
prost = "0.11.8"
prost-build = "0.11.8"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
reqwest = { version = "0.11.16" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_with = { version = "2.3.1" }
shakmaty = "0.23.1"
shakmaty-syzygy = "0.21.0"
structopt = "0.3.26"
superluminal-perf = "0.2.0"
tabled = "0.10.0"
tar = "0.4.38"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7" }
tui = "0.19.0"
unwrap-match = "0.1.0"
vampirc-uci = { version = "0.11.1", features = ["chess"] }
