[workspace]
members = [
    "kn-graph",
    "kn-cuda-sys",
    "kn-cuda-eval",
    "kn-runtime",
    "kn-python",
    "proto-to-rust",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.6.1"
license = "Apache-2.0 OR MIT"
categories = ["science", "compilers"]
keywords = ["inference", "neural-network", "gpu", "cuda", "kyanite"]
repository = "https://github.com/KarelPeeters/Kyanite"
authors = ["Karel Peeters <karel.peeters.leuven@gmail.com>"]
readme = "Readme.md"

# TODO feature for onnx parsing?
# TODO feature for visualization?

# TODO try turning off default features
# TODO require features per-subcrate instead of here for all of them
# TODO get rid of criterion
# TODO there are two different syn versions in the tree

[workspace.dependencies]
# path dependencies
kn-graph = { path = "kn-graph", version = "0.6.1" }
kn-cuda-sys = { path = "kn-cuda-sys", version = "0.6.1" }
kn-cuda-eval = { path = "kn-cuda-eval", version = "0.6.1" }
kn-runtime = { path = "kn-runtime", version = "0.6.1" }

# crates.io dependencies
# TODO update once https://github.com/rust-lang/rust-bindgen/issues/2712 is fixed
bindgen = "0.68.1"
bytemuck = "1.14.0"
byteorder = "1.4.3"
cc = "1.0.83"
clap = { version = "4.4.4", features = ["derive"] }
criterion = "0.5.1"
decorum = { version = "0.3.1", default-features = false, features = ["std"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
indexmap = "2.0.0"
internal-iterator = "0.2.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
ndarray = "0.15.6"
num-traits = "0.2.16"
numpy = "0.20.0"
palette = { version = "0.7.3", default-features = false, features = ["std"] }
prost = "0.12.1"
prost-build = "0.12.1"
pyo3 = "0.20.0"
rand = "0.8.5"
rand_distr = "0.4.3"
unwrap-match = "0.1.0"
