[package]
name = "kn-cuda-eval"
description = "A CUDA executor for neural network graphs"

version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
kn-graph.workspace = true
kn-cuda-sys.workspace = true

bytemuck.workspace = true
internal-iterator.workspace = true
itertools.workspace = true
lazy_static.workspace = true
rand.workspace = true
clap.workspace = true

[build-dependencies]
cc.workspace = true

[dev-dependencies]
criterion.workspace = true
decorum.workspace = true
image.workspace = true
rand_distr.workspace = true

# TODO clean up executables and add profile_net binary again
[[bench]]
name = "memory"
harness = false
