[package]
name = "kn-cuda-sys"
description = "A wrapper around the CUDA APIs"

version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[build-dependencies]
bindgen.workspace = true

[dependencies]
bytemuck.workspace = true
itertools.workspace = true
