[package]
name = "nn-graph"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build.workspace = true

[dependencies]
byteorder.workspace = true
decorum.workspace = true
image.workspace = true
indexmap.workspace = true
itertools.workspace = true
ndarray.workspace = true
num-traits.workspace = true
palette.workspace = true
prost.workspace = true
rand.workspace = true
unwrap-match.workspace = true
