[package]
name = "kn-graph"
description = "A neural network inference graph intermediate representation, with surrounding utilities."

version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[build-dependencies]
prost-build.workspace = true

[dependencies]
byteorder.workspace = true
bytemuck.workspace = true
decorum.workspace = true
image.workspace = true
indexmap.workspace = true
itertools.workspace = true
ndarray.workspace = true
num-traits.workspace = true
palette.workspace = true
prost.workspace = true
rand.workspace = true
unwrap-match.workspace = true
