[workspace]

members = [
    "alpha-zero",
    "nn-graph",
    "cuda-sys",
    "cuda-nn-eval",
    "pgn-reader",
]

[profile.release]
# lto = true
debug = true

# temporary fix until https://github.com/jordanbray/chess/pull/67 is merged
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3