[workspace]

members = [
    # general crates
    "nn-graph",
    "cuda-sys",
    "cuda-nn-eval",
    "pgn-reader",
    "licorice",
    # kZero-specific crates
    "kz-util",
    "kz-core",
    "kz-selfplay",
    "kz-lichess",
    "kz-misc",
    "test-async"
]

[profile.release]
# lto = true
debug = true

# temporary fix until https://github.com/jordanbray/chess/pull/67 is merged
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3