[package]
name = "board-game"
version = "0.3.0"
authors = ["Karel Peeters <karel.peeters.leuven@gmail.com>"]
description = "A board game abstraction and bots and utilities around it."
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
itertools = "0.10.1"
rayon = "1.5.1"
decorum = { version = "0.3.1", default-features = false, features = ["std"] }
newtype-ops = "0.1.4"
internal-iterator = "0.1.2"
num = "0.4.0"
nom = "7.0.0"
regex = { version = "1.5.4", default-features = false, features = ["std"] }
rand_xoshiro = "0.6.0"
cast_trait = "0.1.2"

[target.'cfg(windows)'.dependencies]
windows = "0.17.2"

[target.'cfg(windows)'.build-dependencies]
windows = "0.17.2"

