[package]
name = "cuda-nn-eval"
version = "0.1.0"
edition = "2018"

[dependencies]
cuda-sys = { path = "../cuda-sys" }
nn-graph = { path = "../nn-graph" }

bytemuck = "1.9.1"
itertools = "0.10.3"
rand = "0.8.5"
internal-iterator = "0.2.0"

[dev-dependencies]
criterion = "0.3.5"

[build-dependencies]
cc = "1.0.73"

[[bench]]
name = "memory"
harness = false
