[package]
name = "cuda-nn-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
cuda-sys = { path = "../cuda-sys" }
nn-graph = { path = "../nn-graph" }

bytemuck = "1.9.1"
decorum = { version = "0.3.1", default-features = false, features = ["std"] }
itertools = "0.10.3"
rand = "0.8.5"
internal-iterator = "0.2.0"
image = { version = "0.24.1", default-features = false, features = ["png"] }

lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3.5"
clap = { version = "3.1.12", features = ["derive"] }
rand_distr = "0.4.3"

[build-dependencies]
cc = "1.0.73"

[[bench]]
name = "memory"
harness = false
