[package]
name = "cuda-nn-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
cuda-sys.workspace = true
nn-graph.workspace = true

bytemuck.workspace = true
internal-iterator.workspace = true
itertools.workspace = true
lazy_static.workspace = true
rand.workspace = true

[build-dependencies]
cc.workspace = true

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
decorum.workspace = true
image.workspace = true
rand_distr.workspace = true

[[bench]]
name = "memory"
harness = false
