[package]
name = "kz-core"
version = "0.1.0"
edition = "2021"

[dependencies]
board-game = { version = "0.4.1", path = "../../../board-game-rs" }
nn-graph = { path = "../nn-graph" }
cuda-nn-eval = { path = "../cuda-nn-eval" }
kz-util = { path = "../kz-util" }

chess = "3.2.0"
shakmaty = "0.21.0"
shakmaty-syzygy = "0.19.0"

decorum = { version = "0.3.1", default-features = false, features = ["std"] }
itertools = "0.10.3"
lazy_static = "1.4.0"
internal-iterator = "0.2.0"
rand = "0.8.5"
ndarray = "0.15.4"

# TODO switch to nanoserde or similar, we just want basic json deserialization
serde = { version = "1.0.136", features = ["derive"] }