[package]
name = "kz-core"
version = "0.1.0"
edition = "2021"

[dependencies]
board-game = { version = "0.5.0", path = "../../../board-game-rs" }
nn-graph = { path = "../nn-graph" }
cuda-sys = { path = "../cuda-sys" }
cuda-nn-eval = { path = "../cuda-nn-eval" }
kz-util = { path = "../kz-util" }

chess = "3.2.0"
shakmaty = "0.21.1"
shakmaty-syzygy = "0.19.0"

decorum = { version = "0.3.1", default-features = false, features = ["std"] }
itertools = "0.10.3"
lazy_static = "1.4.0"
internal-iterator = "0.2.0"
rand = "0.8.5"
ndarray = "0.15.4"
bytemuck = "1.9.1"

# TODO switch to nanoserde or similar, we just want basic json deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

flume = "0.10.12"
futures = { version = "0.3.21", default-features = false, features = ["executor", "thread-pool"] }

async-trait = "0.1.53"