[package]
name = "kz-misc"
version = "0.1.0"
edition = "2021"

[dependencies]
board-game = { version = "0.4.1", path = "../../../board-game-rs" }
pgn-reader = { path = "../pgn-reader" }
nn-graph = { path = "../nn-graph" }
cuda-nn-eval = { path = "../cuda-nn-eval" }
cuda-sys = { path = "../cuda-sys" }

kz-core = { path = "../kz-core" }
kz-util = { path = "../kz-util" }
kz-selfplay = { path = "../kz-selfplay" }

chess = "3.2.0"
ndarray = "0.15.4"
crossbeam = "0.8.1"
decorum = { version = "0.3.1", default-features = false, features = ["std"] }
rand = "0.8.5"
internal-iterator = "0.2.0"
itertools = "0.10.3"
clap = { version = "3.1.5", features = ["derive"] }
crossterm = "0.23.0"
tui = "0.17.0"
vampirc-uci = { version = "0.11.0", features = ["chess"] }
rayon = "1.5.1"
shakmaty = "0.21.0"
tar = "0.4.38"
bzip2 = "0.4.3"
image = { version = "0.24.1", default-features = false, features=["png"] }
palette = { version = "0.6.0", default-features = false, features = ["std"] }
