[package]
name = "kz-misc"
version = "0.1.0"
edition = "2021"

[dependencies]
board-game = { version = "0.5.0", path = "../../../board-game-rs" }
pgn-reader = { path = "../pgn-reader" }
nn-graph = { path = "../nn-graph" }
cuda-nn-eval = { path = "../cuda-nn-eval" }
cuda-sys = { path = "../cuda-sys" }

kz-core = { path = "../kz-core" }
kz-util = { path = "../kz-util" }
kz-selfplay = { path = "../kz-selfplay" }

chess = "3.2.0"
ndarray = "0.15.4"
crossbeam = "0.8.1"
flume = "0.10.12"
decorum = { version = "0.3.1", default-features = false, features = ["std"] }
rand = "0.8.5"
internal-iterator = "0.2.0"
itertools = "0.10.3"
clap = { version = "3.1.12", features = ["derive"] }
crossterm = "0.23.2"
tui = "0.18.0"
vampirc-uci = { version = "0.11.1", features = ["chess"] }
rayon = "1.5.2"
shakmaty = "0.21.1"
tar = "0.4.38"
bzip2 = "0.4.3"
image = { version = "0.24.1", default-features = false, features = ["png"] }
palette = { version = "0.6.0", default-features = false, features = ["std"] }

futures = { version = "0.3.21", default-features = false, features = ["executor", "thread-pool"] }
async-trait = "0.1.53"

tabled = "0.7.0"
bytemuck = "1.9.1"