[package]
name = "kz-misc"
version = "0.1.0"
edition = "2021"

[dependencies]
board-game.workspace = true
cuda-nn-eval.workspace = true
cuda-sys.workspace = true
kz-core.workspace = true
kz-selfplay.workspace = true
kz-util.workspace = true
nn-graph.workspace = true
pgn-reader.workspace = true

bzip2.workspace = true
clap.workspace = true
crossbeam.workspace = true
crossterm.workspace = true
decorum.workspace = true
flume.workspace = true
futures.workspace = true
image.workspace = true
internal-iterator.workspace = true
itertools.workspace = true
ndarray.workspace = true
palette.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
tar.workspace = true
tui.workspace = true
vampirc-uci.workspace = true
