[package]
name = "licorice"
version = "0.1.2"
authors = ["icp <pangolin@vivaldi.net>", "hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"
keywords = ["lichess", "api", "dev"]
description = "Lichess API. Development version."
license = "AGPL-3.0-only"
repository = "https://gitlab.com/hyperchessbotauthor/licorice"
homepage = "https://gitlab.com/hyperchessbotauthor/licorice"
documentation = "https://docs.rs/licoricedev/0.1.2"
readme = "ReadMe.md"

[dependencies]
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures-util = "0.3.21"
reqwest = { version = "0.11.10", features = ["json", "stream"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = { version = "1.13.0", features = ["chrono"] }
thiserror = "1.0.30"
tokio = "1.17.0"
tokio-stream = { version = "0.1.8", features = ["io-util"] }
tokio-util = { version = "0.7.1", features = ["io"] }

[dev-dependencies]
anyhow = "1.0.57"
shakmaty = "0.21.1"
structopt = "0.3.26"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
