[package]
name = "licorice"
version = "0.1.2"
authors = ["icp <pangolin@vivaldi.net>", "hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"
keywords = ["lichess", "api", "dev"]
description = "Lichess API. Development version."
license = "AGPL-3.0-only"
repository = "https://gitlab.com/hyperchessbotauthor/licorice"
homepage = "https://gitlab.com/hyperchessbotauthor/licorice"
documentation = "https://docs.rs/licoricedev/0.1.2"
readme = "ReadMe.md"

[dependencies]
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures-util.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["chrono"] }
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true, features = ["io"] }

[dev-dependencies]
anyhow.workspace = true
shakmaty.workspace = true
structopt.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
