[package]
name = "nn-graph"
version = "0.1.0"
edition = "2018"

[build-dependencies]
prost-build = "0.8.0"

[dependencies]
prost = "0.8.0"

byteorder = "1.4.3"
itertools = "0.10.1"
unwrap-match = "0.1.0"
num-traits = "0.2.14"

ndarray = "0.15.1"
convolutions-rs = "0.2.1"
indexmap = "1.7.0"

image = { version = "0.23.14", default-features = false, features = ["png"] }