[package]
name = "nn-graph"
version = "0.1.0"
edition = "2018"

[build-dependencies]
prost-build = "0.9.0"

[dependencies]
prost = "0.9.0"

byteorder = "1.4.3"
itertools = "0.10.3"
unwrap-match = "0.1.0"
num-traits = "0.2.14"
decorum = { version = "0.3.1", default-features = false, features = ["std"] }

ndarray = "0.15.4"
convolutions-rs = "0.2.2"
indexmap = "1.8.0"
rand = "0.8.5"

image = { version = "0.24.1", default-features=false }
palette = { version = "0.6.0", default-features = false, features = ["std"] }