[package]
name = "test-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["sync", "rt", "rt-multi-thread"] }
crossbeam = "0.8.1"
futures = { version = "0.3.21", default-features = false }